--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: "0.7.0"
-
+  firebase_auth: ^1.4.1
+  cloud_firestore: ^2.2.2
+  provider: ^5.0.0
+  flutter_spinkit: ^5.0.0
+  firebase_core: ^1.3.0
+  auth_buttons: ^1.0.1+4
+  google_sign_in: ^5.0.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
