--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,11 @@ dependencies:
   firebase_core: ^1.3.0
   auth_buttons: ^1.0.1+4
   google_sign_in: ^5.0.4
+  font_awesome_flutter: ^8.10.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  rxdart: ^0.27.1
 
 dev_dependencies:
   flutter_test:
